[tool.poetry]
name = "rss3"
version = "0.3.0"
description = ""
authors = ["jukanntenn <jukanntenn@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
eth-account = "^0.5.6"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
respx = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
